@@ -1,3 +1,12 @@
+2005-08-10  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>
+
+	* src/bacon-volume.c: (bacon_volume_button_new),
+	(bacon_volume_scale_value_changed):
+	* src/bacon-volume.h:
+	* src/sj-main.c: (sj_make_volume_button):
+	  Update for varying icon sizes (needed in Rhythmbox); doesn't
+	  actually change anything in practice.
+
 2005-08-09  Ross Burton  <ross@burtonini.com>
 
 	* autogen.sh:
